--- a/packages/blockquote/src/scss/_global.scss
+++ b/packages/blockquote/src/scss/_global.scss
@@ -1,1 +1,9 @@
 // Documentation (re: dependencies, version), variables, and mixins go here... for each component
+
+/* Colors */
+$uq-purple-gradient: linear-gradient(90deg, rgba(81,36,122,1) 0%, 87%, rgba(150,42,139,1) 100%);
+$uq-purple: rgba(81,36,122,1);
+$uq-purple-light:rgba(150,42,139,1);
+$uq-white: #FFF;
+$uq-purple-tint-light: #edeaf1;
+$uq-purple-tint-dark: #522475;
