--- a/packages/storybook-html/src/components/blockquote/blockquote.html
+++ b/packages/storybook-html/src/components/blockquote/blockquote.html
@@ -1,27 +1,27 @@
-<section class="bg-lite">
-    <blockquote class="blockquote blockquote--bg-lite" cite="https://www.google.com/">
+<section class="background-light">
+    <blockquote class="blockquote blockquote--light">
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer"><cite>Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
-<section class="bg-dark">
-    <blockquote class="blockquote blockquote--bg-dark">
+<section class="background-dark">
+    <blockquote class="blockquote blockquote--dark">
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer"><cite>Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
-<section class="bg-lite">
-    <blockquote class="blockquote blockquote--bg-dark blockquote--boxed">
+<section class="background-light">
+    <blockquote class="blockquote blockquote--dark blockquote--boxed">
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer"><cite>Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
@@ -30,29 +30,29 @@
 
 
 
-<section class="bg-lite">
-    <blockquote class="blockquote blockquote--bg-lite blockquote--quotemark">
+<section class="background-light">
+    <blockquote class="blockquote blockquote--light blockquote--quotemark">
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer"><cite>Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
-<section class="bg-dark">
-    <blockquote class="blockquote blockquote--bg-dark blockquote--quotemark">
+<section class="background-dark">
+    <blockquote class="blockquote blockquote--dark blockquote--quotemark">
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer"><cite>Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
-<section class="bg-lite">
-    <blockquote class="blockquote blockquote--bg-dark blockquote--boxed blockquote--quotemark">
+<section class="background-light">
+    <blockquote class="blockquote blockquote--dark blockquote--boxed blockquote--quotemark">
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer"><cite>Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
