--- a/packages/storybook-html/src/components/blockquote/blockquote.scss
+++ b/packages/storybook-html/src/components/blockquote/blockquote.scss
@@ -5,9 +5,9 @@ section {
     padding: 30px 0px;
 }
   
-.bg-lite {
-background-color: #FFF;
+.background-light {
+    background-color: #FFF;
 }
-.bg-dark {
-background-color: #522475;
+.background-dark {
+    background-color: #522475;
 }
