ITSADSSD-17627 Header and footer package initial
Working with Web Components (Stencil), publishing to Github packages, Story created in Storybook. Tested with CRA (as invoked function).
Current header and footer initial packages.

--- a/packages/alert/src/scss/_global.scss
+++ b/packages/alert/src/scss/_global.scss
@@ -10,4 +10,4 @@ $alert-font-weight: 300;
 $alert-padding-top: 1rem;
 $alert-padding-opposite-direction: $alert-padding-top + 2rem;
 
-@import '../../node_modules/foundation-sites/scss/foundation/components/alert-boxes';
+@import '~foundation-sites/scss/foundation/components/alert-boxes';
