--- a/packages/body/src/scss/_global.scss
+++ b/packages/body/src/scss/_global.scss
@@ -31,5 +31,5 @@ $table-row-striped-bg: #fcfcfc;
 $code-border-color: #eee;
 $code-bg: #f5f5f5;
 
-@import '../../node_modules/foundation-sites/scss/foundation/components/tables';
-@import '../../node_modules/foundation-sites/scss/foundation/components/flex-video';
+@import '~foundation-sites/scss/foundation/components/tables';
+@import '~foundation-sites/scss/foundation/components/flex-video';
