--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -1,3 +1,3 @@
 // Variables, functions, and mixins
 
-@import '../../node_modules/foundation-sites/scss/foundation/components/forms';
+@import '~foundation-sites/scss/foundation/components/forms';
