added missing file in final commit

--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -1,3 +1,58 @@
-<div class="footer">
-    FOOTER
-</div>
+<footer class="footer">
+    <div class="footer__content">
+        <div class="row">
+            <div class="large-12 columns">
+                <div class="acknowledgement-statement">
+                    UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="" class="acknowledgement-statement__link">Reconciliation statement</a>
+                </div>
+                <!-- <div class="acknowledgement-statement">
+            The University of Queensland (UQ) acknowledges the Traditional Owners and their custodianship of the lands on which UQ operates. We pay our respects to their Ancestors and their descendants, who continue cultural and spiritual connections to Country. We recognise their valuable contributions to Australian and global society. &mdash; <a href="" class="acknowledgement-statement__link">Reconciliation statement</a>
+          </div> -->
+            </div>
+            <div class="medium-9 columns">
+                <div class="footer__copyright">
+                    &copy; The University of Queensland
+                </div>
+                <div class="footer__contact">
+                    Enquiries: <a href="tel:+61733651111" class="footer__link footer__enquiries-phone" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a>                    &nbsp; | &nbsp; <a href="https://uq.edu.au/contacts" class="footer__link footer__contacts-link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a>
+                </div>
+                <div class="footer__meta">
+                    <abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 &nbsp; | &nbsp;
+                    <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B
+          </a>
+                </div>
+            </div>
+            <div class="medium-3 columns">
+                <div class="footer__emergency-contact footer__aside">
+                    <strong class="footer__sub-title">Emergency</strong><br> Phone: <a href="tel:+61733653333" class="footer__link footer__emergency-phone" onclick="gtag('event', 'click',
+              {'event_category': 'UQ Footer', 'event_label': 'Emergency phone'});">3365 3333</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="footer__footer">
+                <div class="columns large-9 medium-12">
+                    <div class="menu-footer">
+                        <ul class="menu-footer__list">
+                            <li class="menu-footer__item">
+                                <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
+                            </li>
+                            <li class="menu-footer__item">
+                                <a href="https://www.uq.edu.au/rti/" rel="external" class="menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
+                            </li>
+                            <li class="menu-footer__item">
+                                <a href="" rel="" class="menu-footer__link">Accessibility</a>
+                            </li>
+                            <li class="menu-footer__item">
+                                <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="menu-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="columns large-3 medium-12">
+                    <a href="" class="footer__login-link footer__aside" rel="nofollow">Login</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
