--- a/packages/storybook-html/src/components/blockquote/blockquote.html
+++ b/packages/storybook-html/src/components/blockquote/blockquote.html
@@ -2,8 +2,9 @@
     <blockquote class="blockquote blockquote--light">
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
+            <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
@@ -12,7 +13,7 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
@@ -21,7 +22,7 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
@@ -35,7 +36,7 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
@@ -44,7 +45,7 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
 
@@ -53,6 +54,6 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
     </blockquote>
 </section>
