--- a/packages/storybook-html/src/components/blockquote/blockquote.scss
+++ b/packages/storybook-html/src/components/blockquote/blockquote.scss
@@ -6,8 +6,8 @@ section {
 }
   
 .background-light {
-    background-color: #FFF;
+    background-color: $uq-white;
 }
 .background-dark {
-    background-color: #522475;
+    background-color: $uq-purple;
 }
