--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -77,7 +77,7 @@
     stroke-width: 0;
     stroke: #000;
     fill: #000;
-    background-image: url(/images/icon-open-doublequote.svg);
+    background-image: url(/images/icon-open-doublequote.png);
     background-size: cover;
     display: inline-block;
   }
