--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -79,6 +79,7 @@
     fill: #000;
     background-image: url(../images/icon-open-doublequote.png);
     background-size: cover;
+    background-color: transparent;
     display: inline-block;
   }
 
