--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -76,8 +76,8 @@
     height: 27px;
     stroke-width: 0;
     stroke: #000;
-    fill: #000;
-    background-image: url('../images/icon-open-doublequote.png');
+    fill: rgb(185, 43, 43);
+    background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote.svg');
     background-size: cover;
     background-color: transparent;
     display: inline-block;
