--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -75,7 +75,7 @@
     width: 34px;
     height: 27px;
     stroke-width: 0;
-    stroke: #000;
+    stroke: rgb(182, 14, 14);
     fill: rgb(185, 43, 43);
     background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote.svg');
     background-size: cover;
