--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -68,22 +68,7 @@
     background-color: transparent;
   }*/
 
-  .blockquote.blockquote--quotemark::before {
-    position: absolute;
-    top: 0px;
-    left: -20px;
-    width: 34px;
-    height: 27px;
-    stroke-width: 0;
-    stroke: rgb(182, 14, 14);
-    fill: rgb(185, 43, 43);
-    background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote.svg');
-    background-size: cover;
-    background-color: transparent;
-    display: inline-block;
-  }
-
-  .blockquote.blockquote--quotemark::after {
+  /* .blockquote.blockquote--quotemark::after {
     position: absolute;
     bottom: 0px;
     right: -20px;
@@ -100,7 +85,7 @@
   }
   
   .blockquote.blockquote--light.blockquote--quotemark::before,
-  .blockquote.blockquote--dark.blockquote--quotemark::after {
+  .blockquote.blockquote--light.blockquote--quotemark::after {
     color: #edeaf1;
   }
   
@@ -113,6 +98,29 @@
     position: absolute;
     top: 40px;
     left: 10px;
+  }*/
+
+  .blockquote.blockquote--quotemark::before {
+    position: absolute;
+    top: 0px;
+    left: -20px;
+    width: 34px;
+    height: 28px;
+    stroke-width: 0;
+    stroke: #000;
+    fill: #000;
+    background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote-light.svg');
+    background-size: cover;
+    background-color: transparent;
+    display: inline-block;
+  }
+
+  .blockquote.blockquote--light.blockquote--quotemark::before {
+    background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote-light.svg');
+  }
+
+  .blockquote.blockquote--dark.blockquote--quotemark::before {
+    background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote-dark.svg');
   }
   
   /* Elements */
