--- a/packages/storybook-html/src/components/blockquote/blockquote.html
+++ b/packages/storybook-html/src/components/blockquote/blockquote.html
@@ -4,7 +4,10 @@
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer"><p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p></div>
+        <div class="blockquote__footer">
+            <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+            <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+        </div>
     </blockquote>
 </section>
 
