--- a/packages/storybook-html/src/components/blockquote/blockquote.html
+++ b/packages/storybook-html/src/components/blockquote/blockquote.html
@@ -4,7 +4,9 @@
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer"><p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p></div>
+        <div class="blockquote__footer">
+            <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+        </div>
     </blockquote>
 </section>
 
@@ -13,7 +15,9 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">
+            <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+        </div>
     </blockquote>
 </section>
 
@@ -22,7 +26,9 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">
+            </p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div></p>
+        </div>
     </blockquote>
 </section>
 
@@ -36,7 +42,9 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">
+            <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+        </div>
     </blockquote>
 </section>
 
@@ -45,7 +53,9 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">
+            <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+        </div>
     </blockquote>
 </section>
 
@@ -54,6 +64,8 @@
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
-        <div class="blockquote__footer">Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div>
+        <div class="blockquote__footer">
+            <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+        </div>
     </blockquote>
 </section>
