--- a/packages/storybook-html/src/components/blockquote/blockquote.html
+++ b/packages/storybook-html/src/components/blockquote/blockquote.html
@@ -10,7 +10,7 @@
     </blockquote>
 </section>
 
-<section class="background-dark">
+<section class="background-dark"></section>
     <blockquote class="blockquote blockquote--dark">
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
