--- a/packages/storybook-html/src/components/blockquote/blockquote.html
+++ b/packages/storybook-html/src/components/blockquote/blockquote.html
@@ -10,7 +10,7 @@
     </blockquote>
 </section>
 
-<section class="background-dark"></section>
+<section class="background-dark">
     <blockquote class="blockquote blockquote--dark">
         <div class="blockquote__body">
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
@@ -27,7 +27,7 @@
             <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
         </div>
         <div class="blockquote__footer">
-            </p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></div></p>
+            <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
         </div>
     </blockquote>
 </section>
